--- a/EDDI/Properties/MainWindow.resx
+++ b/EDDI/Properties/MainWindow.resx
@@ -271,4 +271,7 @@
   <data name="no_station" xml:space="preserve">
     <value>No Station</value>
   </data>
+  <data name="tab_crew_details_header" xml:space="preserve">
+    <value>Crew Details</value>
+  </data>
 </root>
