--- a/EddiCrimeMonitor/Properties/CrimeMonitor.resx
+++ b/EddiCrimeMonitor/Properties/CrimeMonitor.resx
@@ -135,11 +135,11 @@
   <data name="header_claims" xml:space="preserve">
     <value>Claims</value>
   </data>
+  <data name="header_faction" xml:space="preserve">
+    <value>Faction</value>
+  </data>
   <data name="header_fines" xml:space="preserve">
     <value>Fines</value>
-  </data>
-  <data name="header_name" xml:space="preserve">
-    <value>Faction</value>
   </data>
   <data name="header_station" xml:space="preserve">
     <value>Station</value>
